Update version to 0.1.0 and add homepage URL in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_privacy_shield
 description: "A simple Flutter package that prevents screenshots, blocks screen recording, and blurs sensitive content in background or app switcher."
-version: 0.0.1
-homepage:
+version: 0.1.0
+homepage: https://github.com/Ag1rin/flutter-privacy-shield
 
 environment:
   sdk: ^3.9.2
